# Distributed_LLM_Inference_Gateway

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: Doxyfile  doxygen_filter.sh
docs/doxygen/html/: README_8md.html  annotated.html  annotated_dup.js  circuit__breaker_8cpp.html  circuit__breaker_8cpp_source.html  circuit__breaker_8h.html  circuit__breaker_8h.js  circuit__breaker_8h_source.html  classes.html  classllmgateway_1_1CircuitBreaker-members.html  classllmgateway_1_1CircuitBreaker.html  classllmgateway_1_1CircuitBreaker.js  classllmgateway_1_1CircuitBreakerManager-members.html  classllmgateway_1_1CircuitBreakerManager.html  classllmgateway_1_1CircuitBreakerManager.js  classllmgateway_1_1GatewayServer-members.html  classllmgateway_1_1GatewayServer.html  classllmgateway_1_1GatewayServer.js  classllmgateway_1_1InferenceClient-members.html  classllmgateway_1_1InferenceClient.html  classllmgateway_1_1InferenceClient.js  classllmgateway_1_1LoadBalancer-members.html  classllmgateway_1_1LoadBalancer.html  classllmgateway_1_1LoadBalancer.js  classllmgateway_1_1Log-members.html  classllmgateway_1_1Log.html  classllmgateway_1_1Log.js  classllmgateway_1_1ReplicaRegistry-members.html  classllmgateway_1_1ReplicaRegistry.html  classllmgateway_1_1ReplicaRegistry.js  classllmgateway_1_1ReplicaServer-members.html  classllmgateway_1_1ReplicaServer.html  classllmgateway_1_1ReplicaServer.js  classllmgateway_1_1RequestQueue-members.html  classllmgateway_1_1RequestQueue.html  classllmgateway_1_1RequestQueue.js  classllmgateway_1_1RollingUpdater-members.html  classllmgateway_1_1RollingUpdater.html  classllmgateway_1_1RollingUpdater.js  classllmgateway_1_1gossip_1_1MembershipList-members.html  (+166 more)
docs/doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+82 more)
proto/: gossip.proto  llmgateway.proto
src/client/: client.cpp  client.h  main.cpp
src/common/: log.h
src/gateway/: circuit_breaker.cpp  circuit_breaker.h  gateway_server.cpp  gateway_server.h  load_balancer.cpp  load_balancer.h  main.cpp  replica_registry.cpp  replica_registry.h  request_queue.cpp  request_queue.h  rolling_updater.cpp  rolling_updater.h
src/gossip/: membership_list.cpp  membership_list.h  swim.cpp  swim.h  udp_transport.cpp  udp_transport.h
src/replica/: main.cpp  replica_server.cpp  replica_server.h
tests/: test1_load_balancing.cpp  test2_gossip_failure.cpp  test3_gossip_convergence.cpp  test4_midstream_failover.cpp  test5_backpressure.cpp  test6_suspicion_refutation.cpp  test7_rolling_update.cpp  test8_circuit_breaker.cpp  test9_request_hedging.cpp  test_cluster.cpp  test_cluster.h  test_cluster_smoke.cpp  test_common.h  test_driver.cpp  test_gossip_unit.cpp  test_port_allocator.h  test_runner.h  test_swim_integration.cpp
